Fix text align on the consult button

--- a/source/sass/blocks/company-intro.scss
+++ b/source/sass/blocks/company-intro.scss
@@ -188,9 +188,9 @@
   }
 
   .company-intro__consult-button {
-    width: 80%;
+    width: 100%;
     margin: 0;
-    padding: 18px 10%;
+    padding: 18px 0;
   }
 
   .company-intro__consult-button span:first-of-type {
